man_MANS = pepper.8 
man_aux = $(man_MANS:.1=.x)
EXTRA_DIST = $(man_MANS) dictionary.pepperspot  hotspotlogin.cgi pepper.conf \
						 pepper.iptables firewall.openwrt madwifi-start-ap openbsd_chillispot_installguide.txt \
						 pepper.init pepper.ipup freeradius.users pepper.ip6tables pepperspot-pf.conf



